--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -6,3 +6,7 @@
     outline: none;
     list-style: none;
 }
+.container{
+    width: 1140px;
+    margin: 0 auto;
+}
