--- a/sass/theme/_category-area.scss
+++ b/sass/theme/_category-area.scss
@@ -1,5 +1,4 @@
 #category-area {
-    @include container();
 
     & .category-wrapper {
         display: flex;
