--- a/sass/theme/_feature-area.scss
+++ b/sass/theme/_feature-area.scss
@@ -2,8 +2,7 @@
     margin: 80px 0px;
 
     & .container {
-        @include container();
-
+      
         & .feature-wrapper {
             @include displayGrid();
             text-align: $text-center;
