--- a/sass/theme/_header.scss
+++ b/sass/theme/_header.scss
@@ -6,7 +6,6 @@
 }
 
 .content-wrapper {
-    @include container();
     @include flexAround();
     padding: 50px 10px;
 
