--- a/sass/utilities/_mixin.scss
+++ b/sass/utilities/_mixin.scss
@@ -26,5 +26,5 @@
 @mixin imgWidth {
     display: block;
     width: 100%;
-    height: auto;
+    margin: auto;
 }
